update na calculadora final, insert bd-eduarda

--- a/codes/calculadora-eduarda/calcular.html
+++ b/codes/calculadora-eduarda/calcular.html
@@ -22,10 +22,10 @@
     </div>
 
     <div class="div_card" id="div_exibir" >
-        <h1>Calculadora de ROI</h1>
+        <h1>Simuldaor de ROI</h1>
         <p>Etapa 1: Insira a capacidade do reservatório:
             <input id="input_capacidade" placeholder="Ex: 1000 m³"><br>
-        <p>Etapa 2: Insira o percentual de perda de água:
+        <p> Etapa 2: Insira o percentual de perda de água:
             <input id="input_perda_agua" placeholder="Ex: 5%"><br>
         <p>Etapa 3: Insira os custos de manutenção anuais:
             <input id="input_custo_manutencao" placeholder="Ex: R$ 200"><br>
