--- a/codes/calculadora-final/calcular.html
+++ b/codes/calculadora-final/calcular.html
@@ -4,27 +4,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simulção de ROI</title>
+  <title>Simulador Financeiro </title>
 </head>
 
 <body>
   <div class="div_card" id="div_exibir">
-    <h1>Simulador de ROI</h1>
-    <p>Etapa 1: Insira a capacidade do reservatório:
-      <input id="input_capacidade" placeholder="Ex: 1000 m³"><br>
-    <p> Etapa 2: Insira quanto deseja investir:
-      <input id="input_valor_investimento" placeholder="Ex: R$ 5000"><br>
-    <p>Etapa 3: Insira os custos de manutenção anuais:
-      <input id="input_custo_manutencao" placeholder="Ex: R$ 200"><br>
-    <p>Etapa 4: Insira o custo atual da água (R$/m³):
-      <input id="input_valor_agua" placeholder="Ex: R$ 3"><br>
-    <p>Etapa 5: Insira por quanto tempo deseja investir (Em anos):
-      <input id="input_investimento_anos" type="number" placeholder="Ex: 5">
-    </p><br>
-    <button class="cssbuttons-io-button" onclick="calcularROI();">
-      Calcular
-    </button>
-    <script src="main.js"></script>
+    <center>
+      <h1>Daryo</h1>
+      <h2>Simulando seu retorno financeiro com nossa empresa</h2>
+
+
+      <p>Etapa 1: Insira a capacidade do reservatório:
+        <input id="input_capacidade" placeholder="Ex: 1000 m³" required><br>
+
+      <p>Etapa 2: Insira o tipo do reservatório:
+        <input id="input_tipo " placeholder="Ex: Cilindro" required><br>
+
+      <p> Etapa:3 Insira quanto deseja investir:
+        <input id="input_valor_investimento" placeholder="Ex: R$ 50000" required><br>
+
+      <p>Etapa 4: Insira os custos de manutenção anuais:
+        <input id="input_custo_manutencao" placeholder="Ex: R$ 200" required><br>
+
+      <p>Etapa 5: Insira o custo atual da água (R$/m³):
+        <input id="input_valor_agua" placeholder="Ex: R$ 3" required><br>
+
+      <p>Etapa 6: Insira por quanto tempo deseja investir (Em anos):
+        <input id="input_investimento_anos" type="number" placeholder="Ex: 5" required>
+
+      </p><br>
+
+      <button class="cssbuttons-io-button" onclick="calcularRetorno();">
+        Calcular
+      </button>
+    </center>
 </body>
 
 </html>
+<script src="main.js"></script>
