update lógica calculadora-final

--- a/codes/calculadora-final/calcular.html
+++ b/codes/calculadora-final/calcular.html
@@ -30,19 +30,19 @@
 
       <br>
       <p>Etapa 1: Insira a capacidade do reservatório em m³:
-        <input class="input" id="input_capacidade" placeholder="Ex: 1000 m³" required><br>
+        <input class="input" type="number" id="input_capacidade" placeholder="Ex: 1000 m³" required><br>
 
       <p>Etapa 2: Insira o tipo do reservatório:
         <input class="input" id="input_tipo" type="text" placeholder="Ex: cilindro" required><br>
 
       <p> Etapa:3 Insira quanto deseja investir no projeto:
-        <input class="input" id="input_valor_investimento" placeholder="Ex: R$ 50000" required><br>
+        <input class="input" type="number" id="input_valor_investimento" placeholder="Ex: R$ 50000" required><br>
 
       <p>Etapa 4: Insira os custos de manutenção anuais:
-        <input  class="input" id="input_custo_manutencao" placeholder="Ex: R$ 200" required><br>
+        <input  class="input" type="number" id="input_custo_manutencao" placeholder="Ex: R$ 200" required><br>
 
       <p>Etapa 5: Insira o custo atual da água (R$/m³):
-        <input class="input" id="input_valor_agua" placeholder="Ex: R$ 3" required><br>
+        <input class="input" type="number" id="input_valor_agua" placeholder="Ex: R$ 3" required><br>
 
       <p>Etapa 6: Insira por quanto tempo deseja investir (Em anos):
         <input class="input" id="input_investimento_anos" type="number" placeholder="Ex: 5" required>
