update final na calculadora-final

--- a/codes/calculadora-final/calcular.html
+++ b/codes/calculadora-final/calcular.html
@@ -32,7 +32,7 @@
       <p>Etapa 1: Insira a capacidade do reservatório em m³:
         <input class="input" type="number" id="input_capacidade" placeholder="Ex: 1000 m³" required><br>
 
-      <p>Etapa 2: Insira o tipo do reservatório:
+      <p>Etapa 2: Insira o tipo do reservatório (quadrado, retangular, cilindro, taça):
         <input class="input" id="input_tipo" type="text" placeholder="Ex: cilindro" required><br>
 
       <p> Etapa:3 Insira quanto deseja investir no projeto:
